[package]
name = "tokio-oneshot-channel-spawn"
version = "0.1.0"
edition = "2021"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["sync"] } # ["io-util", "rt", "macros", "sync"] }
